--- a/styles.css
+++ b/styles.css
@@ -1,74 +1,105 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f0f0f0;
+    font-family: "Arial", sans-serif;
+    font-weight: 700;
     margin: 0;
     padding: 0;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    padding: 0 10%;
+    max-width: 80%;
+    margin: 10% auto;
+    align-self: center;
+    background-color: #272932;
+    animation: fadeIn 0.3s ease-in-out; 
+
 }
 
-label {
-    font-size: 1.2rem;
+
+label, input, textarea, button {
+    font-family: inherit;
+    font-size: 16px;
+    line-height: 24px;
     margin-bottom: 10px;
+    
+}
+input[type="file"] {
+    appearance: none;
+    background-color: #007bff;
+    color: #fff;
+    padding: 10px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-weight: bold;
+    transition: background-color 0.2s ease-in-out;
+
+  }
+  
+  input[type="file"]:hover {
+    background-color: #0056b3;
+    transform: scale(1.05) 0.2s ease-in-out;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  input[type="file"]::-webkit-file-upload-button {
+    display: none;
+  }
+  
+label {
+    display: block;
+    margin-bottom: 10px;
+    /* color:#A5CDF1 ; */
+    color:#fff ;
 }
 
-textarea {
+input, textarea {
     width: 100%;
     padding: 10px;
-    font-family: monospace;
-    font-size: 1rem;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    resize: vertical;
-    min-height: 10%;
+    border: 1px solid #ddd; 
+    border-radius: 4px;
+    background-color: #f9f9f9; 
+    transition: border-color 0.3s ease-in-out;
 }
 
-textarea#userCode {
-    background-color: #fff;
+input:focus, textarea:focus {
+    border-color: #007BFF; 
+    outline: none;
 }
 
-textarea#formattedCode {
-    background-color: #f7f7f7;
-}
-
-@media (max-width: 768px) {
-    textarea {
-        width: 95%;
-    }
-}
-.btn {
-    margin:10px;
-    display: inline-block;
-    padding: 10px 20px;
-    font-size: 16px;
-    font-weight: bold;
-    text-align: center;
-    text-decoration: none;
-    background-color: #007bff;
+button {
+    background-color: #007BFF;
+    max-width: 400px;
     color: #fff; 
+    padding: 10px 20px;
     border: none;
-    border-radius: 5px;
+    border-radius: 4px;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    font-weight: bold;
+    transition: background-color 0.3s ease-in-out;
+}
+
+button:hover {
+    background-color: #0056b3;
+
+}
+
+textarea[name="resultTemplate"] {
+    min-height: 100px;
 }
 
 .tfmBtn:hover {
-    background-color: #0056b3; 
+    transform: scale(1.05) 0.3s ease-in-out; 
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2); 
 }
-.fileInput{
-        background-color: #3498db;
-        color: #fff;
-        padding: 10px 20px;
-        border: none;
-        border-radius: 5px;
-        cursor: pointer;
-        font-size: 16px;
-        width: 100%;
-        
-@media (max-width: 768px) {
-        width: 95%;
-}}
+
+.tfmBtn:active {
+    transform: scale(0.95) 0.3s ease-in-out;
+    box-shadow: inset 0 0 10px rgba(0, 0, 0, 0.2);
+}
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
